--- a/C# OOP/WPF Tutorial/Youtube Tutorial/P03-TheGrid/Grid/MainWindow.xaml
+++ b/C# OOP/WPF Tutorial/Youtube Tutorial/P03-TheGrid/Grid/MainWindow.xaml
@@ -8,6 +8,22 @@
         Title="The Grid" Height="800" Width="1000"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="171"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="230"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="191"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="12"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="button" HorizontalAlignment="Center"  VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" Height="368" Margin="0,0,0,0" Width="569" Click="button_Click">
+            <StackPanel Orientation="Vertical">
+                <Image x:Name="image" Stretch="Uniform" Width="300" HorizontalAlignment="Center" Source="Images/Fiordland penguin.jpg" />
+                <TextBlock Margin="0,20,0,0" Text="Click me" HorizontalAlignment="Center" FontSize="24"/>
+            </StackPanel>
+        </Button>
+
     </Grid>
 </Window>
